objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_phone_Number__c</fullName>
        <label>Father&apos;s phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fee_Submited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Submited ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Sem Back ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sem_Percentage__c</fullName>
        <label>First Sem Percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fourth_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fourth Sem Back ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Sem_Percentage__c</fullName>
        <label>Fourth Sem Percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Home_Number__c</fullName>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Link__c</fullName>
        <label>Info Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OverAll_Grade__c</fullName>
        <label>OverAll Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Sem Back ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Sem_Percentage__c</fullName>
        <label>Second Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back__c</fullName>
        <label>Subjects in which Back</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Sem Back ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Sem_Percentage__c</fullName>
        <label>Third Sem Percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year of Class</label>
        <referenceTo>Year_of_Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>secions__c</fullName>
        <label>secions</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student_Name__c</columns>
        <columns>Father_s_Name__c</columns>
        <columns>Roll_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Students</fullName>
        <active>true</active>
        <label>Students</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>